--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --content-base src/client/public --inline --hot"
+    "start": "webpack-dev-server --content-base dist/app --inline --hot"
   },
   "keywords": [],
   "author": "",
@@ -27,11 +27,12 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "@philipyoungg/calendar": "^0.2.5",
     "es6-promise": "^3.2.1",
     "isomorphic-fetch": "^2.2.1",
     "moment": "^2.14.1",
     "react": "^15.3.0",
-    "react-dom": "^15.3.0",
+    "react-dom": "^15.3.1",
     "react-lifecycle-wrap-addon": "0.0.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.7.0",
